# pulsar-subhalo-calibration-gate

./: README.md  pyproject.toml
docs/: methodology.md  release_gate.md
examples/: release_20251112_metrics.json  thresholds.json
results/: gate_decision_release_20251112.json
scripts/: run_gate.py
src/pulsar_subhalo_calibration/: __init__.py  gate.py  metrics.py
tests/: test_gate.py
