[project]
name = "pulsar-subhalo-calibration-gate"
version = "0.1.0"
description = "Calibration gate for uncertainty reliability checks in a pulsar subhalo inference workflow."
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
